--- a/index.css
+++ b/index.css
@@ -85,4 +85,27 @@ aside footer {
 	display: flex;
 	flex-grow: 1;
 	align-items: flex-end;
+	position: relative;
+}
+
+aside footer div {
+	display: flex;
+	width: 320px;
+	flex-direction: column;
+	position: absolute;
+	bottom: 72px;
+	left: 240px;
+	border-radius: 16px;
+}
+
+aside footer div.default {
+	background-color: var(--gray-100);
+	box-shadow: -8px 0px 20px rgba(61, 109, 143, 0.08),
+		0px 0px 20px 1px rgba(61, 109, 143, 0.08);
+}
+
+aside footer div.dark {
+	background-color: var(--secondary-15);
+	box-shadow: -8px 0px 20px rgba(15, 27, 36, 0.35),
+		0px 0px 20px 1px rgba(15, 27, 36, 0.35);
 }
