Sidebar dropdown profile designed and added

--- a/index.css
+++ b/index.css
@@ -88,23 +88,31 @@ aside footer {
 	position: relative;
 }
 
-aside footer div {
+#dropdownItems,
+#dropdownUsername {
 	display: flex;
 	width: 320px;
+	overflow: clip;
 	flex-direction: column;
 	position: absolute;
-	bottom: 72px;
-	left: 240px;
+	bottom: 16%;
+	left: 80%;
 	border-radius: 16px;
 }
 
-aside footer div.default {
+aside footer #dropdownUsername {
+	left: 5%;
+}
+
+#dropdownItems.default,
+#dropdownUsername.default {
 	background-color: var(--gray-100);
 	box-shadow: -8px 0px 20px rgba(61, 109, 143, 0.08),
 		0px 0px 20px 1px rgba(61, 109, 143, 0.08);
 }
 
-aside footer div.dark {
+#dropdownItems.dark,
+#dropdownUsername.dark {
 	background-color: var(--secondary-15);
 	box-shadow: -8px 0px 20px rgba(15, 27, 36, 0.35),
 		0px 0px 20px 1px rgba(15, 27, 36, 0.35);
