--- a/index.css
+++ b/index.css
@@ -1,124 +1,5 @@
-:root {
-	--primary-98: hsla(200, 81.8%, 97.8%, 1);
-	--primary-95: hsla(205, 84.6%, 94.9%, 1);
-	--primary-90: hsla(205, 88.2%, 90%, 1);
-	--primary-70: hsla(205, 86.9%, 70%, 1);
-	--primary-50: hsla(205, 87.6%, 52.7%, 1);
-	--primary-40: hsla(205, 80.4%, 40%, 1);
-	--primary-35: hsla(205, 79.9%, 35.1%, 1);
-	--secondary-98: hsla(210, 40%, 98%, 1);
-	--secondary-95: hsla(204, 38.5%, 94.9%, 1);
-	--secondary-50: hsla(205, 40.4%, 50%, 1);
-	--secondary-40: hsla(205, 40.2%, 40%, 1);
-	--secondary-25: hsla(205, 40.2%, 24.9%, 1);
-	--secondary-15: hsla(205, 40.3%, 15.1%, 1);
-	--gray-100: hsla(0, 0%, 100%, 1);
-	--gray-98: hsla(0, 0%, 98%, 1);
-	--gray-95: hsla(0, 0%, 94.9%, 1);
-	--gray-40: hsla(0, 0%, 40%, 1);
-	--gray-25: hsla(0, 0%, 25.1%, 1);
-	--transparent-25: hsla(205, 88.2%, 90%, 0.250);
-	--transparent-10: hsla(200, 81.8%, 97.8%, 0.100);
-	--transparent-0: hsla(200, 81.8%, 97.8%, 0.0);
-	--success-98: hsla(126, 100%, 98%, 1);
-	--success-95: hsla(129, 100%, 94.9%, 1);
-	--success-60: hsla(128, 100%, 60%, 1);
-	--success-35: hsla(128, 100%, 36.5%, 1);
-	--alert-98: hsla(330, 100%, 98%, 1);
-	--alert-95: hsla(333, 92.3%, 94.9%, 1);
-	--alert-70: hsla(332, 94.8%, 70%, 1);
-	--alert-50: hsla(332, 94.9%, 53.5%, 1);
-	--bold-weight: 700;
-	--regular-weight: 400;
-}
-
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-	font-family: 'Barlow', sans-serif;
-}
-
-html,
-body {
-	font-family: 'Barlow', sans-serif;
-	margin: 0;
-	padding: 0;
-}
-
-body {
-	display: grid;
-	grid-template-columns: 1fr 2fr 1fr;
-	transition: background-color 200ms ease-in-out;
-}
-
-body.light-theme {
-	background-color: var(--gray-100);
-}
-
-body.dark-theme {
-	background-color: var(--secondary-15);
-}
-
-aside {
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	gap: 16px;
-	padding: 16px;
-}
-
-aside header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
-aside section {
-	display: flex;
-	align-items: flex-start;
-	flex-direction: column;
-	gap: 16px;
-	position: relative;
-}
-
-aside footer {
-	display: flex;
-	flex-grow: 1;
-	align-items: flex-end;
-	position: relative;
-}
-
-#dropdownItems,
-#dropdownUsername {
-	display: none;
-	width: 320px;
-	overflow: clip;
-	flex-direction: column;
-	position: absolute;
-	border-radius: 16px;
-}
-
-#dropdownItems {
-	top: 35%;
-	left: 40%;
-}
-
-#dropdownUsername {
-	bottom: 16%;
-	left: 5%;
-}
-
-#dropdownItems.default,
-#dropdownUsername.default {
-	background-color: var(--gray-100);
-	box-shadow: -8px 0px 20px rgba(61, 109, 143, 0.08),
-		0px 0px 20px 1px rgba(61, 109, 143, 0.08);
-}
-
-#dropdownItems.dark,
-#dropdownUsername.dark {
-	background-color: var(--secondary-15);
-	box-shadow: -8px 0px 20px rgba(15, 27, 36, 0.35),
-		0px 0px 20px 1px rgba(15, 27, 36, 0.35);
-}
+@import './CSS/Colors.css';
+@import './CSS/Reset.css';
+@import './CSS/SwitchTheme.css';
+@import './CSS/Layout.css';
+@import './CSS/Aside.css';
