--- a/CSS/Layout.css
+++ b/CSS/Layout.css
@@ -1,5 +1,5 @@
 body {
 	display: grid;
-	grid-template-columns: minmax(240px, 1fr) 3fr minmax(400px, 2fr);
+	grid-template-columns: minmax(240px, 1fr) 1px 3fr 1px minmax(400px, 2fr);
 	transition: background-color 200ms ease-in-out;
 }
