--- a/CSS/Tweet.css
+++ b/CSS/Tweet.css
@@ -1,29 +1,56 @@
-#home section {
+.tweet-card {
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
+	padding: 16px;
 }
 
-#home section div:first-child,
-#home section div:last-child {
+/* Tweet header */
+
+.tweet-card header,
+.tweet-card header div {
+	display: flex;
+	align-items: center;
 	justify-content: flex-start;
 	gap: 8px;
 }
 
-#home section div:nth-child(2) {
+.tweet-card section {
+	display: flex;
+	align-items: center;
 	justify-content: space-between;
-	gap: 4px;
 }
 
-#home section .tweet-content {
+/* Tweet section  */
+.tweet-card section div:first-child {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
+/* Tweet content  */
+.tweet-content {
+	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	gap: 16px;
 }
 
-#home section .tweet-content img {
+.tweet-content img {
 	width: 100%;
 	height: auto;
 	object-fit: cover;
 	border-radius: 16px;
+}
+
+/* Tweet footer */
+.tweet-card footer {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.tweet-card footer div {
+	display: flex;
+	align-items: center;
 }
